fixed overflow issue on images

--- a/frontend/src/styles/components/_product.scss
+++ b/frontend/src/styles/components/_product.scss
@@ -6,7 +6,7 @@
   margin-bottom: 15px;
   border: 1px solid #717171;
   background-color: #565656;
-  overflow: hidden;
+  //overflow: hidden;
   &:hover {
     .image .overlay {
       opacity: 1;
